# agere-2018

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LEFTOFF  Makefile  README.md  TODO  TODO!  build.sh  caf-application.ini  caf-poll.diff  cmake_install.cmake  create_newbs.diff  setup.sh
caf/detail/: mozquic_CB.h  mozquic_helper.hpp  quicly_cb.hpp  quicly_stuff.hpp  util.h
caf/policy/: MozQuic.h  newb_quic.hpp  newb_quicly.hpp  quic_acceptor.hpp  quic_transport.hpp
cmake/: .FindMozquic.cmake.swp  FindBENCHMARK.cmake  FindCAF.cmake  FindMozquic.cmake  FindNSS.cmake  FindPTLS.cmake  FindQuicly.cmake
data/: generate_data.sh
evaluation/: bench.sh  data_bench.sh  layers.R  layers.csv  merge_logs.sh  mininet.py  mininet_bench.py  pingpong-0.R  pingpong-10.R  pingpong.R  pingpong.csv
evaluation/pingpong/: merge_logs.sh  reliable-ordered-udp-handmeasured.csv  reliable-udp-handmeasured.csv  reliable_ordered_udp-0.csv  reliable_ordered_udp-10.csv  reliable_udp-0.csv  reliable_udp-10.csv  tcp-0.csv  tcp-10.csv  tcp.csv
figs/: README.md
src/: four_udp.cpp  layers.cpp  mozquic_CB.cpp  mozquic_CB.h  mozquic_helper.h  mozquic_helper.hpp  network_benchmark.cpp  newb_quic.cpp  newb_quicly.cpp  one_basp_tcp.cpp  one_basp_udp.cpp  one_raw_quic.cpp  one_raw_tcp.cpp  one_raw_udp.cpp  pingpong.cpp  pingpong_quic.cpp  pingpong_quicly.1.cpp  pingpong_quicly.cpp  pingpong_tcp.cpp  pingpong_udp.cpp  pp_tcp_pure.cpp  quic_acceptor.cpp  quic_big_data.cpp  quic_newb_chat_test.cpp  quic_transport.cpp  quicly_cb.cpp  quicly_stuff.cpp  tcp-big-data.cpp  tcp_big_data.cpp  udp_big_data.cpp
